library/general/nounsupportedgpu/samples/gpu-without-env-var/example_allowed_exempt.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-pod-exempt
spec:
  containers:
    - name: dcgm
      image: nvidia/dcgm-exporter:3.1.7
      resources:
        limits:
          nvidia.com/gpu: "1"
